--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ DOMAIN=localhost
 # Workspace Configuration
 WORKSPACE_BASE_PORT=4000
 VSCODE_BASE_PORT=5000
+
+# Traefik Ports (change these if ports conflict with nginx/other services)
+TRAEFIK_HTTP_PORT=3000
+TRAEFIK_HTTPS_PORT=443
+TRAEFIK_DASHBOARD_PORT=8080
