feat: add nginx reverse proxy support and update Traefik configuration

--- a/docker-compose.nginx.yml
+++ b/docker-compose.nginx.yml
@@ -9,8 +9,8 @@
 
 services:
   traefik:
-    deploy:
-      replicas: 0  # Disable traefik
+    profiles:
+      - disabled  # Prevents traefik from starting
 
   web:
     ports:
