feat: add nginx reverse proxy support and update Traefik configuration

--- a/.env.example
+++ b/.env.example
@@ -27,5 +27,8 @@ TRAEFIK_HTTPS_PORT=443
 TRAEFIK_DASHBOARD_PORT=8080
 
 # Direct web port (for nginx reverse proxy deployment)
-# Use: docker-compose -f docker-compose.yml -f docker-compose.nginx.yml up -d
 WEB_PORT=4004
+
+# Docker Compose project name (affects network name)
+# Network will be named: {COMPOSE_PROJECT_NAME}_web
+COMPOSE_PROJECT_NAME=open-agent-ide
