feat: enhance setup script for deployment configuration and nginx setup

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # App Configuration
-NEXTAUTH_URL=http://localhost:3000
+# For local development, use lvh.me (free wildcard DNS pointing to 127.0.0.1)
+NEXTAUTH_URL=http://lvh.me:3000
 NEXTAUTH_SECRET=your-super-secret-key-change-this-in-production
 
 # GitHub OAuth
 # Create a GitHub OAuth App at https://github.com/settings/developers
+# For local dev, set callback URL to: http://lvh.me:3000/api/auth/callback/github
 GITHUB_ID=your-github-client-id
 GITHUB_SECRET=your-github-client-secret
 
@@ -14,8 +16,10 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/open_web_agent
 DOCKER_SOCKET_PROXY=docker-socket-proxy:2375
 DOCKER_HOST=unix:///var/run/docker.sock
 
-# Domain (for production deployment)
-DOMAIN=localhost
+# Domain for workspace routing
+# Local development: use lvh.me (wildcard DNS to 127.0.0.1, supports *.lvh.me subdomains)
+# Production: use your domain (requires wildcard DNS + SSL for *.yourdomain.com)
+DOMAIN=lvh.me
 
 # Workspace Configuration
 WORKSPACE_BASE_PORT=4000
